# edge-utils

./: .gitignore  Cargo.toml  LICENSE.md  compose.yml
docker/: jaeger-config.yml  otel-collector-config.yml
docker/sql/: create-jaeger-views.sql  create-otel-tables.sql
fastly/demo-server/: Cargo.toml  fastly.dev.toml  fastly.toml
fastly/demo-server/src/: main.rs
fastly/dev-server/: Cargo.toml  README.md
fastly/dev-server/src/: context.rs  main.rs  tables.rs  trace.rs  util.rs
fastly/dev-server/src/api/: error.rs  mod.rs  util.rs
fastly/dev-server/src/api/stores/: mod.rs
fastly/dev-server/src/api/stores/config/: items.rs  mod.rs  table.rs
fastly/dev-server/src/api/stores/kv/: keys.rs  mod.rs  table.rs
fastly/dev-server/src/api/stores/secret/: mod.rs  secrets.rs  table.rs
fastly/dev-server/src/cli/: mod.rs  run.rs
fastly/dev-server/src/compute/: compat.rs  mod.rs  stores.rs  util.rs
fastly/opentelemetry/: Cargo.toml
