[workspace]
members = [
  "fastly/opentelemetry",

  "fastly/dev-server",
  "fastly/demo-server",
]
default-members = [
  "fastly/opentelemetry",

  "fastly/dev-server",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "LicenseRef-OQL-1.3"

[workspace.dependencies]
axum = "0.8.8"
axum-extra = "0.12.5"
base64 = "0.22.1"
bon = "3.8.2"
bytes = "1.11.0"
chrono = "0.4.43"
clap = "4.5.56"
fastly = "0.11.13"
headers = "0.4.1"
http = "1.4.0"
http-body = "1.0.1"
http-body-04 = { version = "0.4", package = "http-body" }
hyper014 = { version = "0.14", package = "hyper" }
miette = "7.6.0"
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", default-features = false }
opentelemetry-otlp = "0.31.0"
opentelemetry-semantic-conventions = "0.31.0"
pin-project = "1.1.10"
redb = "3.1.0"
serde = "1.0.228"
serde_json = "1.0.149"
serde_with = "3.16.1"
thiserror = "2.0.18"
tokio = "1.49.0"
tokio-graceful-shutdown = "0.19.2"
tower = "0.5.3"
tower-http = "0.6.8"
tracing = "0.1.44"
tracing-log = "0.2.0"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = "0.3.22"
ulid = "1.2.1"
viceroy-lib = { git = "https://github.com/KokaKiwi/Viceroy.git", branch = "dev-server" }
# viceroy-lib = { path = "../Viceroy" }

fastly-opentelemetry = { path = "fastly/opentelemetry" }
