[package]
name = "fastly-dev-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true, features = ["macros"] }
base64.workspace = true
bon.workspace = true
bytes.workspace = true
clap = { workspace = true, features = ["env"] }
hyper014.workspace = true
miette = { workspace = true, features = ["fancy"] }
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
redb.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
viceroy-lib.workspace = true
