[package]
name = "fastly-dev-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true, features = ["macros"] }
base64.workspace = true
bon.workspace = true
bytes.workspace = true
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["env"] }
headers.workspace = true
http.workspace = true
http-body.workspace = true
http-body-04.workspace = true
hyper014.workspace = true
miette = { workspace = true, features = ["fancy"] }
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp = { workspace = true, features = ["http-proto", "reqwest-rustls", "gzip-http"] }
opentelemetry-semantic-conventions.workspace = true
pin-project.workspace = true
redb = { workspace = true, features = ["logging"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with = { workspace = true, features = ["base64"] }
sha2.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-graceful-shutdown = { workspace = true, features = ["tracing"] }
tower = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-log.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
ulid.workspace = true
viceroy-lib.workspace = true
